test/mpi/errors/cxx/errhan/Makefile.am
##
## Copyright 2026 Argonne National Laboratory
## SPDX-License-Identifier: Apache-2.0
##

include $(top_srcdir)/Makefile_cxx.mtest

EXTRA_DIST = testlist

# avoid having to write many "foo_SOURCES = foo.cxx" lines
AM_DEFAULT_SOURCE_EXT = .cxx

noinst_PROGRAMS = commerrx errgetx errsetx throwtest

